[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/fonts/dpcomic.regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.172549, 0.207843, 0.301961, 0.843137 )

[sub_resource type="DynamicFont" id=8]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[node name="GameOverMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
margin_right = 640.0
margin_bottom = 214.0
custom_constants/margin_top = 60
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
margin_top = 60.0
margin_right = 640.0
margin_bottom = 154.0
custom_constants/separation = 24

[node name="GameOverText" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Game Over"
align = 1
valign = 1

[node name="ScoreText" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 640.0
margin_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Score: 0"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
margin_top = 218.0
margin_right = 640.0
margin_bottom = 308.0
grow_horizontal = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="RestartButton" type="Button" parent="MenuContainer/ButtonContainer"]
margin_right = 640.0
margin_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MenuContainer/ButtonContainer"]
margin_top = 45.0
margin_right = 640.0
margin_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Main menu"

[node name="Footer" type="Label" parent="MenuContainer"]
margin_top = 312.0
margin_right = 640.0
margin_bottom = 360.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = "

"

[connection signal="pressed" from="MenuContainer/ButtonContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
